Adjusted css styling to utilize classes instead of element for Stretch Goal. Added background color of darkorange to the whole body, adjusted font-weight to be bold in body, but 'lighter' within the greyBackground class.

--- a/assignment/index.html
+++ b/assignment/index.html
@@ -5,12 +5,12 @@
     <title>Unit 5, Part 2 - HTML/CSS Practice</title>
     <link rel="stylesheet" href="stylesheet.css">
   </head>
-  <body>
-    <header>
-      <h1>Unit 5, Part 2 - HTML/CSS Practice</h1>
-      <h2>Joshua's Record Shop</h2>
+  <body class="Body_Class">
+    <header class="dark">
+      <h1 class="light">Unit 5, Part 2 - HTML/CSS Practice</h1>
+      <h2 class="light">Joshua's Record Shop</h2>
     </header>
-    <main>
+    <main class="greyBackground">
       <p>See console for output.</p>
     </main>
     <!-- Create an unordered list with any questions you have -->
